<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000609"
    android:orientation="vertical"
    tools:context=".SignupActivity">

    <ImageView
        android:id="@+id/signupAvatarImage"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center_horizontal"
        android:layout_margin="30dp"
        android:contentDescription="@string/avatar_description"
        android:src="@drawable/get_schwifty" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_margin="15dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/emailSignupEditText"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:background="#B34B86"
            android:drawableStart="@drawable/ic_email"
            android:drawablePadding="10dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="15dp"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/passwordSignupEditText"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:background="#B34B86"
            android:drawableStart="@drawable/ic_password"
            android:drawablePadding="10dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="15dp"
            android:textSize="15sp" />

        <Button
            android:id="@+id/signupButton"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="40dp"
            android:background="@drawable/button_signup"
            android:text="@string/singup"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/already_member"
            android:textAlignment="center"
            android:textColor="#B34B86"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/signinTextView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/sign_in"
            android:textAlignment="center"
            android:textColor="#B34B86"
            android:textSize="20sp" />

    </LinearLayout>
</FrameLayout>