<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2F2F2F"
    android:orientation="vertical"
    tools:context=".ForgotPasswordActivity">

    <ImageView
        android:id="@+id/forgotPasswordBackgroundImage"
        android:layout_width="145dp"
        android:layout_height="145dp"
        android:layout_gravity="top|center_horizontal"
        android:layout_margin="20dp"
        android:src="@drawable/nobody_cares" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="15dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="15dp"
            android:text="@string/welcome_forgot_password"
            android:textAlignment="center"
            android:textColor="#C7E2E9"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/emailResetLInkEditText"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:background="#C7E2E9"
            android:drawableStart="@drawable/ic_email"
            android:drawablePadding="10dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="15dp"
            android:textSize="15sp" />

        <Button
            android:id="@+id/sendResetLinkButton"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="40dp"
            android:background="@drawable/button_send_reset_link"
            android:text="@string/send_reset_link"
            android:textAlignment="center"
            android:textColor="#2F2F2F"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/backToLoginTextView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/back_to_login"
            android:textAlignment="center"
            android:textColor="#C7E2E9"
            android:textSize="20sp" />

    </LinearLayout>
</FrameLayout>